# nixtrack

./: README.md  build_docs.sh  mkdocs.yml  pyproject.toml  setup.py
docs/: format.md
nixtrack/: __init__.py  dataset.py  info.json  util.py
src/nixtrack/: dataset.py
test/: test.nix  test.py
